reaction to changes in shallow analyzer